[gd_scene load_steps=3 format=2]

[ext_resource path="res://CM/Context/Scenes/ContextGeneration.gd" type="Script" id=1]
[ext_resource path="res://CM/Context/Scenes/RootUI.gd" type="Script" id=2]

[node name="Control" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1038.0
margin_bottom = -595.0
script = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 400.0
margin_bottom = 177.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content"]
margin_right = 393.0
margin_bottom = 14.0
text = "Generate context for {context_type}"
align = 1

[node name="ErrorLabel" type="Label" parent="Content"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_top = 18.0
margin_right = 707.0
margin_bottom = 32.0
text = "ERROR"
align = 1

[node name="ErrorTimer" type="Timer" parent="Content/ErrorLabel"]
wait_time = 8.0
autostart = true

[node name="RootUI" type="HBoxContainer" parent="Content"]
margin_top = 18.0
margin_right = 393.0
margin_bottom = 86.0
script = ExtResource( 2 )

[node name="RootLabel" type="Label" parent="Content/RootUI"]
margin_top = 27.0
margin_right = 75.0
margin_bottom = 41.0
text = "Root Node: "

[node name="RootName" type="LineEdit" parent="Content/RootUI"]
margin_left = 79.0
margin_right = 137.0
margin_bottom = 68.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Suggestions" type="VBoxContainer" parent="Content/RootUI"]
margin_left = 141.0
margin_right = 205.0
margin_bottom = 68.0

[node name="DefaultSuggestionButton1" type="Button" parent="Content/RootUI/Suggestions"]
margin_right = 64.0
margin_bottom = 20.0
text = "Control"

[node name="DefaultSuggestionButton2" type="Button" parent="Content/RootUI/Suggestions"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "Node2D"

[node name="DefaultSuggestionButton3" type="Button" parent="Content/RootUI/Suggestions"]
margin_top = 48.0
margin_right = 64.0
margin_bottom = 68.0
text = "Spatial"

[node name="ContextNameUI" type="HBoxContainer" parent="Content"]
margin_top = 90.0
margin_right = 393.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="Content/ContextNameUI"]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 19.0
text = "ContextName: "

[node name="LineEdit" type="LineEdit" parent="Content/ContextNameUI"]
margin_left = 99.0
margin_right = 157.0
margin_bottom = 24.0
caret_blink = true
caret_blink_speed = 0.5

[node name="EtitorUI" type="HBoxContainer" parent="Content"]
margin_top = 118.0
margin_right = 393.0
margin_bottom = 142.0

[node name="EditorSceneLabel" type="Label" parent="Content/EtitorUI"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Editor Scene?"

[node name="EditorCheckBox" type="CheckBox" parent="Content/EtitorUI"]
margin_left = 89.0
margin_right = 113.0
margin_bottom = 24.0

[node name="ActionButtons" type="HBoxContainer" parent="Content"]
margin_top = 146.0
margin_right = 393.0
margin_bottom = 166.0
alignment = 2

[node name="CreateContext" type="Button" parent="Content/ActionButtons"]
margin_right = 53.0
margin_bottom = 20.0
text = "Create"

[node name="AddSecondaryContext" type="Button" parent="Content/ActionButtons"]
margin_left = 57.0
margin_right = 216.0
margin_bottom = 20.0
text = "Add Secondary Context"

[node name="ClearSecondaryContextsButton" type="Button" parent="Content/ActionButtons"]
margin_left = 220.0
margin_right = 393.0
margin_bottom = 20.0
text = "Clear Secondary Contexts"

[node name="SecondaryContexts" type="VBoxContainer" parent="Content"]
margin_top = 170.0
margin_right = 393.0
margin_bottom = 170.0

[node name="TypeConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 7.0
margin_top = 7.0
margin_right = 400.0
margin_bottom = 177.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Potvrďte prosím..."

[node name="VBoxContainer" type="VBoxContainer" parent="TypeConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="Label" type="Label" parent="TypeConfirmationDialog/VBoxContainer"]
margin_right = 377.0
margin_bottom = 14.0
text = "Select content type."
align = 1

[node name="TypeOptions" type="OptionButton" parent="TypeConfirmationDialog/VBoxContainer"]
margin_top = 18.0
margin_right = 377.0
margin_bottom = 38.0

[connection signal="timeout" from="Content/ErrorLabel/ErrorTimer" to="." method="_on_ErrorTimer_timeout"]
[connection signal="text_changed" from="Content/RootUI/RootName" to="." method="_on_RootName_text_changed"]
[connection signal="text_changed" from="Content/ContextNameUI/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="Content/EtitorUI/EditorCheckBox" to="." method="_on_EditorCheckBox_toggled"]
[connection signal="pressed" from="Content/ActionButtons/CreateContext" to="." method="_on_CreateContext_pressed"]
[connection signal="pressed" from="Content/ActionButtons/AddSecondaryContext" to="." method="_on_AddSecondaryContext_pressed"]
[connection signal="pressed" from="Content/ActionButtons/ClearSecondaryContextsButton" to="." method="_on_ClearSecondaryContextsButton_pressed"]
[connection signal="confirmed" from="TypeConfirmationDialog" to="." method="_on_TypeConfirmationDialog_confirmed"]
